--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-05-portfolio.html</title>
-    <link
+    <title>goit-markup-hw-07-portfolio.html</title>
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&&display=swap"
       rel="stylesheet"
     />
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
   <body>
     <header>
@@ -334,13 +334,13 @@
         </div>
         <div class="column-three">
           <b>Подпишитесь на рассылку</b>
-          <form action="">
+          <form action="#">
             <div class="subscribe-section">
               <div class="input">
                 <input
                   class="subscribe-input"
                   type="email"
-                  placeholder=" Email"
+                  placeholder="Email"
                   name="email"
                   id="#"
                 />
